Specify webol help text color, to ensure readability against the background in the face of user configurations.

--- a/resources/public/css/webol-help.css
+++ b/resources/public/css/webol-help.css
@@ -1,4 +1,5 @@
 ._container, body {
+  color:black;
   background-color:#F0D8B8;
   text-align:left;
   width: 130mm;
